demenchuk/examples/errors/parser/05_incomplete_if.riv
# PARSER ERROR: Неполный if без блока
# Ожидаемая ошибка: Expected indented block after 'if' at line 5

x = 10
if x > 5:
else:
    write("less or equal")
